syntax = "proto3";

package greeter;

// The greeting service definition
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply);
    
    // Sends multiple greetings (server streaming)
    rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name
message HelloRequest {
    string name = 1;
}

// The response message containing the greeting
message HelloReply {
    string message = 1;
}
